# plant_detect

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
backend/: requirements.txt
backend/app/api/: main.py
backend/app/src/herbs_detection/: load_data.py  model.py  model_ed.py  model_illness.py  model_pytorch_large.py  model_sklearn.py  model_tensorflow.py  params.py  pytorch_backend.py  pytorch_pipeline.py  registry.py  tensorflow_backend.py  tensorflow_pipeline.py
docker/: backend.Dockerfile
frontend/: fiches.json  fiches_ill.json  main.py  requirements.txt  suggestions.json  utils.py
frontend/pages/: 0_Predict.py  0_Prediction.py  0_Prediction_aromate.py  1_Entrainement.py  1_Image_Labelling.py  1_Label_Images.py  1_Prediction_maladies.py  2_Image_Labelling.py  2_Multiple_Predictions.py  2_Multiple_Predictions_Aromates.py  2_multiple_predict.py  3_Multiple_Predictions.py  3_Multiple_Predictions_Aromates.py  3_Multiple_Predictions_Maladie.py  3_Prediction copy.py  4_Image_Labelling.py  4_Multiple_Predictions_Maladie.py  4_Prediction copy.py
notebooks/: Training_pytorch_colab.ipynb  Training_pytorch_colab.ipynb:Zone.Identifier  benchmark_models_pt.ipynb  benchmark_models_tf.ipynb  mushrooms_test_gpt.ipynb  sandbanks.ipynb  scrapping.ipynb  training.ipynb  training_ed.py  training_pytorch.ipynb  training_pytorch_ed.ipynb  training_sklearn.ipynb
notebooks/dataset_aromatic_duckduckgo/: dataset.csv
notebooks/logs/phaseA/train/: events.out.tfevents.1773756839.Omen-Thomas.73992.0.v2
scripts/: deploy_models.py  setup_gcs_bucket.sh
(+3 files in other folders)
