[project]
name = "herbs-detection"
version = "0.1.0"
description = "these modules will allow us to create an app for herbs detection"
authors = [
    {name = "Jimmy Ouellet",email = "jimmy.ouellet@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scikit-learn (>=1.8.0,<2.0.0)",
    "pandas (>=2.0.1,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "mlflow (>=3.10.1,<4.0.0)"
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
