[project]
name = "herbs_detection"
version = "0.1.0"
description = "these modules will allow us to create an app for herbs detection"
authors = [
    {name = "Jimmy Ouellet",email = "jimmy.ouellet@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.4.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly-express (>=0.4.1,<0.5.0)"

]

[tool.poetry]
packages = [{ include = "herbs_detection", from = "backend/app/src" }]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
